--- a/paganini.html
+++ b/paganini.html
@@ -50,36 +50,63 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
+    <img src="saijo/2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="saijo/5.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="saijo/7.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="saijo/8.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
     <img src="paganini/70.JPG" class="picture">
 </div>
+
+<div class="picture-container">
+    <img src="saijo/16.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="saijo/17.JPG" class="picture">
+</div>
+<div style="text-align: center;">332国道</div>
+
 <br><br>
 <div style="text-align: center;">来几个农田视频</div>
 
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/OeC45EuJPO4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-   <video controls style="width: 40%; height: auto;">
-        <source src="paganini/IMG_2493.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"> </div>
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/ihwMNSb47TE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-   <video controls style="width: 80%; height: auto;">
-        <source src="paganini/IMG_2494.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
    <div style="text-align: center;">上下是同一地方，不同季节。</div>
 
-   <video controls style="width: 80%; height: auto;">
-        <source src="paganini/IMG_4305.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"> </div>
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/Tg1PUvP_eZU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
 
-   <video controls style="width: 80%; height: auto;">
-        <source src="paganini/IMG_4311.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/DoN4PtNlo2Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
    <div style="text-align: center;">332国道 </div>
-
+   
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/HwZhU2OBkiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
 
 <div class="picture-container">
     <img src="paganini/12.JPG" class="picture">
@@ -448,27 +475,25 @@
 <div class="picture-container">
     <img src="paganini/85.JPG" class="picture">
 </div>
-<div style="text-align: center;">我要离开了，走之前给冈崎先生及榊広子奶奶送礼物。奶奶每次见到我都和我聊天，不过我日语不好听的不太懂。摄于2023年9月。</div>
+<div style="text-align: center;">我要离开了，走之前给冈崎先生及榊広子奶奶送礼物。奶奶每次见到我都和我聊天，不过我日语不好听的不太懂。(摄于2023年9月)</div>
 
 <div style="text-align: center;">最后来几个视频。</div>
 
-  <video controls style="width: 40%; height: auto;">
-        <source src="paganini/IMG_5306.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"> </div>
-
-  <video controls style="width: 80%; height: auto;">
-        <source src="paganini/IMG_6989.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"> </div>
-
-  <video controls style="width: 40%; height: auto;">
-        <source src="paganini/IMG_6998.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"> </div>
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/_SoWVO4rkyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div style="text-align: center;">Paganini全景</div>
+   
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/9yCcdKPT79I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div style="text-align: center;">Paganini的蛋糕</div>
+   
+   
+   <div style="text-align: center;">
+       <iframe width="60%" height="315" src="https://youtube.com/embed/Pz0J4_Yo6DM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div style="text-align: center;">Paganini的厕所</div>
 
 <div style="text-align: center;">每次吃完蛋糕，就经过下面的路回家了，还会去mosmos及精肉店买菜。2023年大概4月我家冰箱坏了，吃完蛋糕我就回家直接吃午晚饭了。</div>
 <div class="picture-container">
