--- a/home_friends.html
+++ b/home_friends.html
@@ -161,6 +161,12 @@
 <div style="text-align: center;">又一次和教会朋友聚会</div>
 
 <div class="picture-container">
+    <img src="mis/friends_gathering/dinner/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">2020年3月疫情下聚会。日本一般很少这个鸡脆骨的，一般是鸡胸那段，我喜欢这个鸡腿的。我一般不加油直接下锅，让它自己出油，然后水分干了就变脆了。</div>
+
+
+<div class="picture-container">
     <img src="home/friends/18.JPG" class="picture">
 </div>
 <div style="text-align: center;">2020年疫情下的中东菜</div>
@@ -184,61 +190,6 @@
     <img src="home/friends/24.JPG" class="picture">
 </div>
 <div style="text-align: center;">又干杯！</div>
-
-<div style="text-align: center;">这几年一个收获就是DIY护肤品。话说在东京某天我产生了开公众号写护肤品成分科普的念头。在广岛某天，我看到一篇文献，把occlusive moisturizer及humectant（滋润东西可分开三类，还有第三种是emollient）混合一起，可以大大加强滋润效果。碰巧我家里有，分别是凡士林及甘油，我就试试了，成了我第一款产品。万事起头难，有了第一款产品后，之后idea陆续来。</div>
-<div class="picture-container">
-    <img src="home/cosmetics/2.JPG" class="picture">
-</div>
-<div style="text-align: center;">做散粉</div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/9.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/7.JPG" class="picture">
-</div>
-<div style="text-align: center;">使用前</div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/4.JPG" class="picture">
-</div>
-<div style="text-align: center;">使用后</div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/6.JPG" class="picture">
-</div>
-<div style="text-align: center;">祛痘印度泥面膜</div>
-
-
-    <video controls style="width: 60%; height: auto;">
-        <source src="home/cosmetics/印度泥.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;"></div>
-
-
-<div class="picture-container">
-    <img src="home/cosmetics/5.JPG" class="picture">
-</div>
-<div style="text-align: center;">有次出门花花给我用她的pon pon powder，我一看成分很简单。后来知道变性玉米淀粉是最吸油的，直接买了这个给她试试。</div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/1.JPG" class="picture">
-</div>
-<div style="text-align: center;">有次花花送沐浴球，我又查了一下，原来又很简单的。</div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/8.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="home/cosmetics/3.JPG" class="picture">
-</div>
-<div style="text-align: center;">润唇膏，现在还没用完。（2024年8月）</div>
-
 
 
 
