--- a/gym.html
+++ b/gym.html
@@ -56,7 +56,7 @@
 <div class="picture-container">
     <img src="gym/14.JPG" class="picture">
 </div>
-<div style="text-align: center;">大家看看我左小腿比右的肌肉，而且也比较直。</div>
+<div style="text-align: center;">大家看看我左小腿比右小腿要直。</div>
 
 <div class="picture-container">
     <img src="gym/15.JPG" class="picture">
