--- a/gym.html
+++ b/gym.html
@@ -71,7 +71,12 @@
 <div class="picture-container">
     <img src="gym/12.JPG" class="picture">
 </div>
-<div style="text-align: center;">洗澡间</div>
+<div style="text-align: center;">洗澡间（酒店）</div>
+
+<div class="picture-container">
+    <img src="mis/mis/2.JPG" class="picture">
+</div>
+<div style="text-align: center;">ハロズ洗澡间。有个墩布专门吸头发用，这里用完吹风起要自己扫头发，游泳池也是的。</div>
 
 <div class="picture-container">
     <img src="gym/1.JPG" class="picture">
@@ -295,7 +300,29 @@
 <div class="picture-container">
     <img src="gym/swimming_pool_14.JPG" class="picture">
 </div>
-<div style="text-align: center;">很好吃的釜饭。</div
+<div style="text-align: center;">很好吃的釜饭。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/16.JPG" class="picture">
+</div>
+<div style="text-align: center;">不吃乌冬可以吃天妇罗。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/28.JPG" class="picture">
+</div>
+<div style="text-align: center;">釜饭有特价的（700还是770），配炸鸡唐揚げ或おでん，每天好像15分，11点多去有的。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/11.JPG" class="picture">
+</div>
+<div style="text-align: center;">除了釜饭，海鮮丼也很好吃，1000日元，可以选寿司饭（带醋）。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/15.JPG" class="picture">
+</div>
+<div style="text-align: center;">全套海鮮丼。</div>
+
+
 <p>除了以上，我还打过两次パークゴロフ（park golf），在西条以北的福富，开车约半小时。门票1040日元，玩一圈，另租用工具310元。次活动在地图上看的，无意中发现就想去玩。第一次平时早上去，都是爷爷奶奶，很热闹。另一次周末下午，反而没人，就两个家庭。那里环境优美，这个玩意新奇有趣。第一次和杨冲去玩，他竟然玩的比我好（唯一玩的比我好的运动）。</p>
 
 <div class="picture-container">
