--- a/home_food.html
+++ b/home_food.html
@@ -247,6 +247,11 @@ div class="picture-container">
 <div style="text-align: center;">紫苏水，我有时候加冰果醋喝。紫苏在农家超市买。事缘2017年夏天喝朋友去京都一个生产紫苏的地方，吃过紫苏食品我就会煮紫苏水了。</div>
 
 <div class="picture-container">
+    <img src="mis/mis/24.JPG" class="picture">
+</div>
+<div style="text-align: center;">西条特产 - 美酒锅。可以买酒回家自己做的。这个味道怎样我没印象了。</div>
+
+<div class="picture-container">
     <img src="home/food/42.JPG" class="picture">
 </div>
 <div style="text-align: center;">一个人的烧烤。</div>
