--- a/office_room.html
+++ b/office_room.html
@@ -269,6 +269,11 @@
 </div>
 <div style="text-align: center;">平时去的北1食堂楼上是餐厅，菜是先做的，我喜欢吃那里的炸猪扒饭かつどん。</div>
 
+<div class="picture-container">
+    <img src="mis/mis/40.JPG" class="picture">
+</div>
+<div style="text-align: center;">还有这个keema咖喱我也喜欢，记得味道是辣的。</div>
+
 
 
 <div class="picture-container">
