--- a/mis_mis.html
+++ b/mis_mis.html
@@ -112,13 +112,30 @@
 <div class="picture-container">
     <img src="mis/mis/22.JPG" class="picture">
 </div>
-<div style="text-align: center;">在日本，最欣赏他们的贴心。在便利店，他们把这种袋子先打开（这种袋子很多时候要用口水打开的）。在市役所，他们有毛毯（日本很喜欢冬天盖毛毯在大腿上）及老花镜。在音乐厅有轮椅。药店买药打印一张纸来告诉你药一天服用几次，附有药的照片。东京地铁每个站台都有表示其他站站台电梯及扶手梯的位置，方便赶时间的人。售票机如何没取找的钱会响，提醒你记得取钱。</div>
+<div style="text-align: center;">在日本，最欣赏他们的贴心。在便利店，他们把这种袋子先打开（这种袋子很多时候要用口水打开的）。在市役所，他们有毛毯（日本很喜欢冬天盖毛毯在大腿上）及老花镜。在音乐厅有轮椅。药店买药打印一张纸来告诉你药一天服用几次，附有药的照片。售票机如何没取找的钱会响，提醒你记得取钱。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/tokyo1.JPG" class="picture">
+</div>
+
+<div class="picture-container">
+    <img src="mis/mis/tokyo2.JPG" class="picture">
+</div>
+<div style="text-align: center;">东京地铁每个站台都有表示其他站站台电梯及扶手梯的位置，方便赶时间的人。</div>
+
+<div class="picture-container">
+    <img src="mis/mis/red_leaves_forecast.JPG" class="picture">
+</div>
+<div style="text-align: center;">樱花红叶季一到，还有个别地区预测观看时间。</div>
+
 
 <div class="picture-container">
     <img src="mis/mis/33.JPG" class="picture">
 </div>
 
 <div style="text-align: center;">为了方便人拿，篮筐会提高。</div>
+
+
 
 
 <div class="picture-container">
