--- a/office_campus_post.html
+++ b/office_campus_post.html
@@ -135,6 +135,16 @@
     <img src="postoffice/3.JPG" class="picture">
 </div>
 <div style="text-align: center;">邮局卖的明信片</div>
+
+<div class="picture-container">
+    <img src="postoffice/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">日本是个手工大国，折纸尤其发达。邮局也用折纸布置的。照片后面的マイナポイント政府活动，鼓励人申请my number card。当时总共好像送了15000日元。</div>
+
+<div class="picture-container">
+    <img src="postoffice/5.JPG" class="picture">
+</div>
+<div style="text-align: center;">邮局圣诞布置。</div>
 <p>下一章</p>
 <br><br>
 
