--- a/office_room.html
+++ b/office_room.html
@@ -179,6 +179,15 @@
 </div>
 <div style="text-align: center;"> 打扫完后干净很多，原来地板是黑的。</div>
 
+<div class="picture-container">
+    <img src="office/room/66.JPG" class="picture">
+</div>
+<div style="text-align: center;"> 后来的办公室，和几个学生一起，大扫除把所有东西搬出来。</div>
+
+<div class="picture-container">
+    <img src="office/room/67.JPG" class="picture">
+</div>
+<div style="text-align: center;"> </div>
 
 <div class="picture-container">
     <img src="office/room/54.JPG" class="picture">
