--- a/mis_eczema.html
+++ b/mis_eczema.html
@@ -65,6 +65,16 @@
 </div>
 <div style="text-align: center;"></div>
 
+<div class="picture-container">
+    <img src="mis/202003eczema/11.JPG" class="picture">
+</div>
+<div style="text-align: center;">2023年后来好了的时候</div>
+
+<div class="picture-container">
+    <img src="mis/202003eczema/12.JPG" class="picture">
+</div>
+<div style="text-align: center;">2023年年初我不知道是不是新冠，那次之后搞到我皮肤敏感。背部还出了点疹子。</div>
+
 <p>下一章</p>
 <br><br>
 
