--- a/gym.html
+++ b/gym.html
@@ -69,6 +69,12 @@
 <div style="text-align: center;">这台跑步机我很熟悉，德国用一样的牌子，不过这台能打游戏的过的不能。德国的经常坏，这台也坏了超过一个月没换。欣赏日本说的清清楚楚，坏的原因，什么时候修好也说明，这令人觉得问题有人在管，令人安心。</div>
 
 <div class="picture-container">
+    <img src="gym/25.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+<div class="picture-container">
     <img src="gym/12.JPG" class="picture">
 </div>
 <div style="text-align: center;">洗澡间（酒店）</div>
@@ -87,6 +93,11 @@
     <img src="gym/5.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="gym/5A.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是疫情的时候</div>
 
 <div class="picture-container">
     <img src="gym/7.JPG" class="picture">
@@ -322,6 +333,10 @@
 </div>
 <div style="text-align: center;">全套海鮮丼。</div>
 
+<div class="picture-container">
+    <img src="mis/mis/24.JPG" class="picture">
+</div>
+<div style="text-align: center;">天龟其实卖点是水鱼すっぼん，料理包括生内脏，生血。</div>
 
 <p>除了以上，我还打过两次パークゴロフ（park golf），在西条以北的福富，开车约半小时。门票1040日元，玩一圈，另租用工具310元。次活动在地图上看的，无意中发现就想去玩。第一次平时早上去，都是爷爷奶奶，很热闹。另一次周末下午，反而没人，就两个家庭。那里环境优美，这个玩意新奇有趣。第一次和杨冲去玩，他竟然玩的比我好（唯一玩的比我好的运动）。</p>
 
