--- a/home_food.html
+++ b/home_food.html
@@ -83,6 +83,14 @@
 </div>
 <div style="text-align: center;">乡土料理 - 槐花炒鸡蛋。话说那次打网球槐花就在眼前，又一次便利性激发，摘了很多回去炒鸡蛋。如果远我都不会去摘。</div>
 
+
+<div class="picture-container">
+    <img src="home/food/58.JPG" class="picture">
+</div>
+<div style="text-align: center;">网球场附近摘的槐花，在树上一股清香。</div>
+
+
+
 <div class="picture-container">
     <img src="home/food/54.JPG" class="picture">
 </div>
