--- a/home_food.html
+++ b/home_food.html
@@ -71,6 +71,11 @@
 </div>
 <div style="text-align: center;">一桌正宗德国菜，还有德国酸菜汤（Sauerkraut）。为了迎合气氛，我还买了蜡烛的（德国餐馆每家都在桌上放小蜡烛）。</div>
 
+<div class="picture-container">
+    <img src="event/2021.10.17rubbish/20221024_28.JPG" class="picture">
+</div>
+<div style="text-align: center;">跑题插句，有段时间家里冰箱坏了（大概2023年4月），我做了好多酸菜。</div>
+
 
 <div class="picture-container">
     <img src="home/food/26.JPG" class="picture">
