--- a/event_rubbish.html
+++ b/event_rubbish.html
@@ -20,19 +20,30 @@
 
 <div style="text-align: left;">今次介绍室外的政府活动。这些活动好玩，有时候还有礼物。很多家庭去的。活动政府花钱也花心思，参加者大小一同欢乐，比起直接送钱好很多。</div>
             
-<b>広島中央エコパーク(eco park)</b><br>
+<b>広島中央エコパーク(eco park)开放日</b><br>
 日期：2021年10月17日及2022年10月24日<br>
-<p>2021年落成位于东广岛的垃圾厂，长期有展览室，开放日有导游团，玩游戏还有礼物）。每次这种活动都有出摊（卖个人二手东西或卖食物，手工艺类），还有各种演出节目，很丰富的。第一年和乐乐去，还买了便宜的新衣服。第二年同一天西条还举办环環境フェア(fair)及爱护动物活动，很多环保科技公司来出摊玩游戏送礼物。</p>
+<p>2021年落成位于东广岛的垃圾厂（正式名字広島中央エコパーク），有展览室长期开放，开放日有导游团，室外演示，玩游戏送礼物及演出节目(日本这种活动イベント都有演出节目，一般都是演出艺术，音乐舞蹈之类，学生社团经常有机会演出)。每次这种活动都有出摊（必定有食品方便人一边玩一边吃，有时候还有手工艺及二手物品），很丰富的。第一年和乐乐去，还买了便宜的新衣服。第二年同一天西条还举办环環境フェア(fair)及爱护动物活动，很多环保科技公司来出摊玩游戏送礼物。</p>
 
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/4.JPG" class="picture">
 </div>
 <div style="text-align: center;">现在音乐表演（好像是贺茂高中）</div>
 
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/LfC6fKbJ71Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div style="text-align: center;">交响乐视频</div>
+
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/10.JPG" class="picture">
 </div>
 <div style="text-align: center;">现场书法表演</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/8Yiw2lK27C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">书法表演视频</div>
 
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/7.JPG" class="picture">
@@ -49,6 +60,11 @@
 </div>
 <div style="text-align: center;">学习使用消防喉</div>
 
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/dXSzHuHv_1A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">垃圾车操作及消防喉使用视频</div>
+
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_38.JPG" class="picture">
 </div>
@@ -63,7 +79,14 @@
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_39.JPG" class="picture">
 </div>
-<div style="text-align: center;">垃圾车</div>
+<div style="text-align: center;">垃圾收集车</div>
+
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/lrCVqT-CQT4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">可以进行问答的机械人</div>
+
 
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_40.JPG" class="picture">
@@ -261,10 +284,16 @@
 </div>
 <div style="text-align: center;">环境fair有神乐表演</div>
 
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/pF2xDJssmtQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">神乐视频</div>
+
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_18.JPG" class="picture">
 </div>
 <div style="text-align: center;">看神乐的人不少。</div>
+
 
 
 <div class="picture-container">
@@ -296,12 +325,12 @@
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_23.JPG" class="picture">
 </div>
-<div style="text-align: center;">带领养的动物</div>
+<div style="text-align: center;">待领养的动物</div>
 
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/11.JPG" class="picture">
 </div>
-<div style="text-align: center;">带领养的动物</div>
+<div style="text-align: center;">待领养的动物</div>
 
 <div class="picture-container">
     <img src="event/2021.10.17rubbish/20221024_24.JPG" class="picture">
