--- a/home_friends.html
+++ b/home_friends.html
@@ -191,7 +191,38 @@
 </div>
 <div style="text-align: center;">又干杯！</div>
 
+<div class="picture-container">
+    <img src="home/friends/2021-01-11pp.JPG" class="picture">
+</div>
+<div style="text-align: center;">这个很温柔的女孩叫盼盼。2020年11月和我们一起去北九州才认识。我和她很投缘，直到她2021年春毕业也经常一起玩，我去过她的教会，她也来过我家里吃饭。</div>
 
+
+<div class="picture-container">
+    <img src="home/friends/24.JPG" class="picture">
+</div>
+<div style="text-align: center;">又干杯！</div>
+
+
+<div class="picture-container">
+    <img src="home/friends/IMG_3258.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是靓靓2019年送给我的生日礼物。她把我和她的合照洗了出来做相册。这个idea很好，后来学长离开时我们也做了一本给他。</div>
+
+
+<div class="picture-container">
+    <img src="home/friends/IMG_3259.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="home/friends/IMG_3260.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="home/friends/IMG_3261.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
 
 <p>下一章</p>
 <br><br>
