--- a/home_friends.html
+++ b/home_friends.html
@@ -8,7 +8,7 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
-    <title>Life in Saijo</title>
+    <title>高鹏满座</title>
 </head>
 <body>
     <header>
