--- a/apsaras.html
+++ b/apsaras.html
@@ -28,9 +28,23 @@
 <div style="text-align: center;">圆圆姐在门口。</div>
 
 <div class="picture-container">
-    <img src="apsaras/10.JPG" class="picture">
+    <img src="apsaras/38.JPG" class="picture">
 </div>
 <div style="text-align: center;">厨房。</div>
+
+<div class="picture-container">
+    <img src="apsaras/39.JPG" class="picture">
+</div>
+<div style="text-align: center;">牛肉素面</div>
+
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/j0zzpp8opr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>圆圆姐做饭</iframe>
+</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/DPWj3-09kj4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>圆圆姐做饭</iframe>
+</div>
 
 <div class="picture-container">
     <img src="apsaras/8.JPG" class="picture">
@@ -51,6 +65,11 @@
     <img src="apsaras/18.JPG" class="picture">
 </div>
 <div style="text-align: center;">我和她们姐妹两（圆圆和喜炎）。</div>
+
+<div class="picture-container">
+    <img src="apsaras/27.JPG" class="picture">
+</div>
+
 
 <div class="picture-container">
     <img src="apsaras/19.JPG" class="picture">
@@ -88,25 +107,20 @@
 </div>
 <div style="text-align: center;">我最喜欢的捞粉。</div>
 
-<div class="picture-container">
-    <img src="apsaras/.JPG" class="picture">
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/p65pc1wkQ40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">VIP限定的骨汤</div>
 
-
-    <video controls style="width: 60%; height: auto;">
-        <source src="apsaras/bonebroth.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-   <div style="text-align: center;">VIP限定的骨汤。 </div>
 
 <div class="picture-container">
-    <img src="apsaras/1.JPG" class="picture">
+    <img src="1.JPG" class="picture">
 </div>
 <div style="text-align: center;">柬埔寨宫廷甜品，她们教了我如何做，不容易的，一定要用慢火蒸。</div>
 
 <div class="picture-container">
-    <img src="apsaras/15.JPG" class="picture">
+    <img src="15.JPG" class="picture">
 </div>
 <div style="text-align: center;">bahn xeo越南薄饼，这个很难做的很脆的。她们做的好吃。</div>
 
@@ -146,6 +160,185 @@
 </div>
 
 
+<div style="text-align: center;"></div>
+
+
+<div class="picture-container">
+    <img src="apsaras/35.JPG" class="picture">
+</div>
+
+<div style="text-align: left;">终于到了最后一晚，我去她们那里晚饭。去之前到健身房最后一击，还跑的很快（1.6km+400m）*3间歇跑，10km/hr速度呢</div>
+
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/VJlfrGqzHNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>我们的晚饭(2023年9月26日）</iframe>
+</div>
+
+<div class="picture-container">
+    <img src="apsaras/30.JPG" class="picture">
+</div>
+<div style="text-align: center;">我们的晚饭</div>
+
+<div class="picture-container">
+    <img src="apsaras/41.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/33.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/34.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/42.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+<div class="picture-container">
+    <img src="apsaras/43.JPG" class="picture">
+</div>
+<div style="text-align: center;">我送给她们的礼物</div>
+
+<div class="picture-container">
+    <img src="apsaras/53.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐送给我的香水</div>
+
+<div class="picture-container">
+    <img src="apsaras/55.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/57.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/58.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/59.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/40.JPG" class="picture">
+</div>
+<div style="text-align: center;">我们的料理</div>
+
+<div style="text-align: left;">看看他们的老照片</div>
+
+<div class="picture-container">
+    <img src="apsaras/28.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐难民营订婚宴</div>
+
+<div class="picture-container">
+    <img src="apsaras/29.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐母亲一家（父母是圆圆姐的外公外婆）</div>
+
+<div class="picture-container">
+    <img src="apsaras/31.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆和喜炎</div>
+
+<div class="picture-container">
+    <img src="apsaras/32.JPG" class="picture">
+</div>
+<div style="text-align: center;">难民营的法语班</div>
+
+<div class="picture-container">
+    <img src="apsaras/44.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐爷爷奶奶</div>
+
+<div class="picture-container">
+    <img src="apsaras/45.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/46.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/47.JPG" class="picture">
+</div>
+<div style="text-align: center;">叶先生（好像于澳门）</div>
+
+<div class="picture-container">
+    <img src="apsaras/48.JPG" class="picture">
+</div>
+<div style="text-align: center;">吴哥窟</div>
+
+<div class="picture-container">
+    <img src="apsaras/49.JPG" class="picture">
+</div>
+<div style="text-align: center;">叶先生</div>
+
+<div class="picture-container">
+    <img src="apsaras/50.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐姑姑结婚</div>
+
+<div class="picture-container">
+    <img src="apsaras/51.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/52.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="apsaras/54.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐在越南</div>
+
+<div class="picture-container">
+    <img src="apsaras/60.JPG" class="picture">
+</div>
+<div style="text-align: center;">圆圆姐在越南</div>
+
+<div class="picture-container">
+    <img src="apsaras/56.JPG" class="picture">
+</div>
+<div style="text-align: center;">越南圆圆姐四姐弟和亲戚</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/YlEd69d3srE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;"> 叶先生介绍他们的老照片。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://www.youtube.com/embed/st9HA8ZnpHQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;"> 叶先生介绍他们的老照片。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;"> 叶先生介绍他们的老照片。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/eyXcFlP6riA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">叶先生跳舞</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/O4s-8_5dccQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>叶先生跳舞</iframe>
+</div>
+
 <p>下一章</p>
 <br><br>
 
@@ -158,4 +351,4 @@
  </div>
  <script src="script.js"></script> <!-- Link to your JS file -->
 </body>
-</html>
+</html>s
