--- a/event_xiaohongshu.html
+++ b/event_xiaohongshu.html
@@ -18,7 +18,10 @@
         <article>
             <p>上一章</p>
 
-<div style="text-align: left;">今章介绍一下我在西条参加过的一些演出活动。基本都是免费的，活动地点主要是くらら，还有市民文化センター及广岛大学。如果你爱音乐会，这边完全可以满足你。除了免费，偶尔也有外国乐团演出。下面内容主要出自我的小红书。</div><br>
+<div style="text-align: left;">今章介绍一下我在西条参加过的一些演出活动。基本都是免费的，活动地点主要是くらら，还有市民文化センター及广岛大学。如果你爱音乐会，这边完全可以满足你。除了免费，偶尔也有外国乐团演出。这些活动东广岛市<a href="https://www.city.higashihiroshima.lg.jp/soshiki/somu/2_1/4/11392.html" target=_blank>广报</a>都有。广报是日本每个行政都有的地域刊物，介绍各种政府非政府活动イベント，教授烹饪手工艺等的班，地方新特色或其他咨询。你从广报看到，东广岛政府定期办急救班。
+  <br>
+    
+    下面内容主要出自我的小红书。</div><br>
 
 くらら网址：<a href ="https://www.city.higashihiroshima.lg.jp/soshiki/chiikishinko/7/3/matidukurihojokin/27402.html" target=_blank>https://kurara-hall.jp</a><br>
 市民文化センタ<a href ="https://www.shiminbunka.org" target=_blank>https://www.shiminbunka.org</a><br><br>
@@ -80,7 +83,7 @@
 </div>
 <div style="text-align: center;">今天演出的合唱团</div>
 
-<p>最后我介绍一下<a href ="https://www.city.higashihiroshima.lg.jp/soshiki/chiikishinko/7/3/matidukurihojokin/27402.html" target=_blank>市民協働のまちづくり活動応援補助金について</a>。这是市政府及市民团体办活动的补助金。不同团体给的不一样，市民团体最多40万，学生团体20万(2024    年)。我有广岛大学朋友申请过，项目是做视频介绍东广岛。有了这些基金，市民就可以多享受免费活动了（具体过往什么活动申请被接纳网站有pdf文件）。</p>
+<p>最后我介绍一下<a href ="https://www.city.higashihiroshima.lg.jp/soshiki/chiikishinko/7/3/matidukurihojokin/27402.html" target=_blank>市民協働のまちづくり活動応援補助金について</a>。这是市政府及市民团体办活动的补助金。不同团体给的不一样，市民团体最多40万，学生团体20万(2024    年)。我有广岛大学朋友申请过，项目是做视频介绍东广岛。有了这些基金，市民就可以多享受免费活动了（具体过往什么活动申请被接纳网站有pdf文件）。有团体用过这个资助办<a href ="https://pc.tamemap.net/3421251/activities/34212510359/reports/8434" target=_blank>相亲活动</a>呢。</p>
 
 <b>2023东广岛市政府交响乐队定期演奏会</b>
 日期: 2023年3月19日<br>
